# Tietokannat-ja-web-ohjelmointi-Projekti

./: .gitignore  README.md  app.py  ideas.txt  messages.py  pyproject.toml  requirements.txt  schema.sql
src/: app.py  bookmarks.py  books.py  db.py  pairs.py  routes.py  users.py
src/templates/: :w  create_new_pair.html  delete_entity.html  error.html  form.html  index.html  layout.html  layout_logged_out.html  login.html  read_pair.html  reading_layout.html  register.html  upload.html  view_pairs.html  view_uploads.html
templates/: index.html  login.html  pair.html  registration.html  upload.html  upload_success.html
