[tool.poetry]
name = "tietokannat-ja-web-ohjelmointi-projekti"
version = "0.1.0"
description = ""
authors = ["xavier <x@xavier.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
